--- a/src/Component/PostList/PostList.module.scss
+++ b/src/Component/PostList/PostList.module.scss
@@ -1,5 +1,9 @@
 
-.postForm {
+.postList {
   display: flex;
   flex-direction: column;
+
+  & > *:not(:last-child) {
+    margin-bottom: 10px;
+  }
 }
