--- a/src/Component/UI/Button/MyButton.module.scss
+++ b/src/Component/UI/Button/MyButton.module.scss
@@ -8,7 +8,7 @@
   border: 1px solid teal;
   border-radius: 4px;
 
-  font-size: 16px;
+  font-size: 1em;
 
   &Border {
     color: black;
@@ -24,7 +24,7 @@
     color: white;
 
     &:hover {
-      font-size: 18px;
+      border: 1px solid black;
     }
   }
 }
