search on button, input ref
поиск по нажатию кнопки, передача ref в input компонент

--- a/src/App.module.scss
+++ b/src/App.module.scss
@@ -18,9 +18,8 @@
     }
 
     .search {
-        input {
-            width: 100%;
-        }
+        display: grid;
+        grid-template-columns: 7fr 1fr;
     }
 }
 
